--- a/youtubeparser/build.gradle
+++ b/youtubeparser/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 5
-        versionName "2.2"
+        versionName "2.3"
     }
     buildTypes {
         release {
@@ -22,13 +22,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.2'
 }
 
-group = 'com.prof.youtubeparser'
-version = '2.2'
+group = 'com.prof.youtubeparserpb'
+version = '2.3'
 
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -57,10 +57,10 @@ bintray {
         name = 'YoutubeParser'
 
         version {
-            name = '2.2'
+            name = '2.3'
             desc = 'A library to parse Youtube video'
             released = new Date()
-            vcsTag = '2.2'
+            vcsTag = '2.3'
         }
 
         licenses = ['Apache-2.0']
