--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@
 buildscript {
     repositories {
         jcenter()
-        google()
-        mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath "com.github.dcendents:android-maven-gradle-plugin:1.5"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,8 +20,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        google()
-        mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
